// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/modalBase should renders correctly HorizontalButtonsView destructive 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "paddingTop": 30,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#F54D3D",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#FFF",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textLeft
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#F54D3D",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#FFF",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textRight
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/modalBase should renders correctly HorizontalButtonsView primary 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "paddingTop": 30,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#2B78EE",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#FFF",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textLeft
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#2B78EE",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#FFF",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textRight
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/modalBase should renders correctly HorizontalButtonsView secondary 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "paddingTop": 30,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#2B78EE",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textLeft
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#2B78EE",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textRight
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/modalBase should renders correctly HorizontalButtonsView tertiary 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "paddingTop": 30,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "transparent",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#2B78EE",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textLeft
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "transparent",
        "borderRadius": 18,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 9,
        "minHeight": 72,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 27,
            "lineHeight": 33,
          },
          [
            {
              "color": "#2B78EE",
              "paddingHorizontal": 9,
            },
            undefined,
          ],
        ]
      }
    >
      textRight
    </Text>
  </View>
</View>
`;
